--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Jonas Miersch</a>.
+      Coded by <a href="https://github.com/jm1069">Jonas Miersch</a>.
     </div>
 
   </body>
